--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ html, body {
 <img alt="Map" onclick="location.href='map.html'" src="icons/map.png"/>
 </div>
 </div>
-<div class="separator">ArmÃ©e</div>
+<div class="separator">Army</div>
 <div class="section-rest" id="cardContainer"></div>
 <div id="popup-overlay">
 <div class="popup-content" style="background: #222; padding: 20px; display: flex; flex-direction: column; gap: 20px; border-radius: 0.5em;">
