--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ html, body {
 </div>
 </div>
 <div class="header-right">
-<button class="drag-toggle" id="dragToggleBtn" onclick="toggleDrag()">DÃ©verrouiller</button>
+<button class="drag-toggle" id="dragToggleBtn" onclick="toggleDrag()">Unlock</button>
 <button class="reset-all" onclick="resetAllData()">Reset Data</button>
 </div>
 </header>
